force-app/main/default/objects/Monitor__c/Monitor__c.object-meta.xml
<CustomObject>
    <label>Monitor</label>
    <nameField>
        <label>Nome Monitor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>