force-app/main/default/objects/Monitor__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>TEXT(
 FLOOR(LastEndDatetime__c - LastStartDatetime__c)
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((LastEndDatetime__c - LastStartDatetime__c)*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((LastEndDatetime__c - LastStartDatetime__c)*1440,60),0)
) &amp;&quot; Minutes &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>