force-app/main/default/objects/Monitor__c/fields/LastEndDatetime__c.field-meta.xml
<CustomField>
    <fullName>LastEndDatetime__c</fullName>
    <label>Last End Datetime</label>
    <type>DateTime</type>
</CustomField>