force-app/main/default/objects/Monitor__c/fields/LastEndResult__c.field-meta.xml
<CustomField>
    <fullName>LastEndResult__c</fullName>
    <label>Last End Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>