force-app/main/default/objects/Monitor__c/fields/LastStartDatetime__c.field-meta.xml
<CustomField>
    <fullName>LastStartDatetime__c</fullName>
    <label>Last Start Datetime</label>
    <type>DateTime</type>
</CustomField>