force-app/main/default/objects/Monitor__c/fields/NextEndDatetimeEstimate__c.field-meta.xml
<CustomField>
    <fullName>NextEndDatetimeEstimate__c</fullName>
    <formula>IF(ISBLANK(LastStartDatetime__c) || ISBLANK(LastEndDatetime__c) || ISBLANK(NextStartDatetimeEstimate__c),
null,
NextStartDatetimeEstimate__c + (LastEndDatetime__c -  LastStartDatetime__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next End Datetime (Estimate)</label>
    <type>DateTime</type>
</CustomField>