force-app/main/default/objects/Monitor__c/fields/NextStartDatetimeEstimate__c.field-meta.xml
<CustomField>
    <fullName>NextStartDatetimeEstimate__c</fullName>
    <formula>LastStartDatetime__c + (SchedulingFrequencyHours__c * 60) / 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Start Datetime (Estimate)</label>
    <type>DateTime</type>
</CustomField>