force-app/main/default/objects/Monitor__c/fields/SchedulingFrequencyHours__c.field-meta.xml
<CustomField>
    <fullName>SchedulingFrequencyHours__c</fullName>
    <label>Scheduling Frequency (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>